<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/start_screen_bg"
        tools:context=".intro.IntroActivity">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/introTxt"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30sp"
            android:gravity="bottom"
            android:lines="2"
            bind:font="@{``}"
            android:text="@string/welcome"
            android:textColor="#fff"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/introTxt"
            bind:font="@{``}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:lineSpacingExtra="8dp"
            android:lines="2"
            android:text="@string/intro_data"
            android:textColor="#fff"
            android:textSize="18sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/introTxt"
            android:layout_marginBottom="70dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/cust_intro_btn"
                android:onClick="loginAction"
                bind:font="@{``}"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="21sp" />

            <View
                android:layout_width="15dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/signUpBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/cust_intro_btn"
                android:onClick="signUpAction"
                android:text="@string/sign_up"
                bind:font="@{``}"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="21sp" />

        </LinearLayout>

    </RelativeLayout>
</layout>