<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="profVM"
            type="com.master_vision.trfihi.edit_profile.EditProfileViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#fff"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/cust_toolbar_bg"
                android:elevation="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:layout_width="50dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@android:color/transparent"
                        android:onClick="onBackClick"
                        android:src="@drawable/back" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/edit_profile"
                        android:textColor="#fff"
                        android:textSize="25sp"
                        bind:font="@{``}" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:orientation="vertical">


                <android.support.v7.widget.CardView
                    android:id="@+id/itemRole"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:layout_margin="5dp"
                    android:background="#c094ff"
                    android:orientation="horizontal"
                    app:cardBackgroundColor="#c094ff"
                    app:cardCornerRadius="55dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:padding="2dp"
                            android:src="@drawable/empty"
                            bind:circle_image_url="@{profVM.profileImageUrl}" />

                    </LinearLayout>


                </android.support.v7.widget.CardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/profile_image"
                    android:textColor="#333333"
                    android:textSize="22sp"
                    bind:font="@{``}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"
                    android:onClick="@{profVM::onGalleryClick}"
                    android:src="@drawable/gallery" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:background="#c094ff" />

                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@android:color/transparent"
                    android:onClick="@{profVM::onCameraClick}"
                    android:src="@drawable/camera" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="#c094ff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="#333333"
                    android:textSize="20sp" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="#c094ff"
                        android:checked="@{profVM.maleCheck}"
                        android:onClick="@{profVM::onMaleClick}"
                        android:text="@string/male"
                        android:textSize="18sp" />

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="#c094ff"
                        android:checked="@{profVM.femaleCheck}"
                        android:onClick="@{profVM::onFemaleClick}"
                        android:text="@string/female"
                        android:textSize="18sp" />

                </RadioGroup>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="#c094ff" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_of_birth"
                    android:textColor="#333333"
                    android:textSize="20sp" />

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:onDateChanged="@{(view,year,month,day)-> profVM.getDateChanged(view,year,month,day)}"
                    android:datePickerMode="spinner"
                    android:spinnersShown="true" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="#c094ff" />

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:buttonTint="#c094ff"
                android:checked="@{profVM.showImg}"
                android:onClick="@{profVM::onShowImgClick}"
                android:text="@string/show_prof_img"
                android:textSize="16sp"
                bind:font="@{``}" />

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:buttonTint="#c094ff"
                android:checked="@{profVM.showGender}"
                android:onClick="@{profVM::onShowGenderClick}"
                android:text="@string/show_gender"
                android:textSize="16sp"
                bind:font="@{``}" />

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:buttonTint="#c094ff"
                android:checked="@{profVM.showDOF}"
                android:onClick="@{profVM::onShowDOFClick}"
                android:text="@string/show_birth_date"
                android:textSize="16sp"
                bind:font="@{``}" />

            <Button
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/cust_toolbar_bg"
                android:gravity="center"
                android:onClick="@{profVM::onSaveClick}"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="21sp"
                bind:font="@{``}" />

        </LinearLayout>

    </ScrollView>

</layout>

