<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="verifVM"
            type="com.master_vision.trfihi.registration.verification.VerificationViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cust_toolbar_bg"
            android:elevation="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">


                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:onClick="onBackClick"
                    android:background="@android:color/transparent"
                    android:src="@drawable/back" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/verification"
                    bind:font="@{``}"
                    android:textColor="#fff"
                    android:textSize="25sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/cust_verif_bg"
                android:padding="5dp"
                android:src="@drawable/ic_check"
                android:tint="#fff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/footer"
            android:layout_below="@+id/header"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                bind:font="@{``}"
                android:text="@string/verification_data"
                android:textColor="#333333"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/enter_code_here"
                bind:font="@{``}"
                android:textColor="#c094ff"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/cust_reg_bg"
                android:gravity="center"
                android:hint="@string/enter_code_here"

                bind:font="@{``}"
                android:text="@={verifVM.code}"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="20sp" />

            <Button
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/cust_toolbar_bg"
                android:gravity="center"
                android:text="@string/verify"
                android:onClick="@{verifVM::onSendVerificationCodeClick}"
                bind:font="@{``}"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="21sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:onClick="@{verifVM::onResendClick}"
                android:background="@android:color/transparent"
                android:elevation="5dp"
                android:src="@drawable/send" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_code"
                bind:font="@{``}"
                android:textColor="#333333"
                android:textSize="16sp" />

        </LinearLayout>
    </RelativeLayout>

</layout>

