<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="loginVM"
            type="com.master_vision.trfihi.login.LoginViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bind="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dialog_mobile_title"
                android:textColor="#000"
                android:textSize="20sp"
                bind:font="@{``}" />

            <View
                android:layout_width="8dp"
                android:layout_height="match_parent" />

            <ImageButton
                android:id="@+id/closeDialog_action"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_close" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/cust_reg_bg"
                android:gravity="center">

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:onItemSelected="@{(parent,view,pos,id)->loginVM.onSelectItem(parent,view,pos,id)}"
                    bind:set_spinner_selection="@{loginVM.spinnerSelectionPosition}"
                    bind:spinner_adapter="@{loginVM.flagsSpinnerAdapter}" />

            </LinearLayout>

            <View
                android:layout_width="5dp"
                android:layout_height="match_parent" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cust_reg_bg"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="7dp"
                bind:font_textInputLayout="@{``}">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/mobile"
                    android:inputType="phone"
                    android:text="@={loginVM.mobileDialog}"
                    android:textSize="16sp"
                    bind:font="@{``}" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_action"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/cust_toolbar_bg"
                android:gravity="center"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp"
                bind:font="@{``}" />

            <View
                android:layout_width="20dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/save_action"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/cust_toolbar_bg"
                android:gravity="center"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp"
                bind:font="@{``}" />
        </LinearLayout>

    </LinearLayout>
</layout>

